fix the bug of layout too small

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,5 +14,5 @@ img{
 }
 
 div.notion-selectable{
-  max-width: 100% !import; 
+    max-width: none !important; 
 }
